<resources>
    <string name="app_name">3rd_cos_table</string>

    <!--membership.xml-->
    <string name="edt_mem_id">ID</string>
    <string name="edt_mem_pw">PW</string>
    <string name="edt_mem_pwck">PW 확인</string>
    <string name="tv_skintype">피부타입</string>
    <string name="btn_dry">건성</string>
    <string name="btn_normal">중성</string>
    <string name="btn_oily">지성</string>
    <string name="btn_combi">복합성</string>
    <string name="tv_dose"> 정량이 궁금하다면 ? </string>
    <string name="tv_ck_mytype">내 피부타입이 궁금하다면 ? </string>
    <string name="tv_ck_sensitive">민감성체크</string>
    <string name="tv_Q1">각질과 뾰루지가 자주 발생하시나요?</string>
    <string name="tv_Q2">피부가 가렵거나 따끔거림이 있으신가요?</string>
    <string name="btn_mem_join">가입 완료</string>

    <string name="tg_btn_dry">건성</string>



    <!--fragment_jisung.xml 피부타입체크리스트-->
 <string name="btn_sendMain">처음화면</string>


    <!-- cos_intro_activity.xml -->
    <string name="btn_go_login">로그인</string>
    <string name="btn_go_join">회원가입</string>

    <!-- cos_login.xml -->
    <string name="edt_login_id">ID 입력</string>
    <string name="edt_login_pw">PW 입력</string>
    <string name="btn_login">로그인</string>

    <!--main.xml-->
    <string name="edt_main_id"></string>
    <string name="tv_mycos">나의 화장품</string>
    <string name="btn_plus"></string>
    <string name="tv_usedate1">사용기한</string>
    <string name="tv_usedate2">사용기한</string>
    <string name="tv_usedate3">사용기한</string>
    <string name="tv_usedcos">화장품 이름 / 사용 기간 /상태(완료 / 중단) </string>

    <!--activity_coss_add.xml-->
    <string name="btn_add">등록</string>
    <string name="btn_edt">수정</string>
    <string name="btn_delete">삭제</string>
    <string name="tv_add_img1">1</string>
    <string name="tv_add_img2">2</string>
    <string name="tv_add_img3">3</string>

    <!--cos_shoot.xml-->
    <string name="tv_cosshoot">올바른 촬영 예시</string>
    <string name="tv_pdqr">
        제품 뒷면에 있는 큐알 코드를
        카메라에 바르게 찍어주세요!!
    </string>
    <string name="btn_cancle">취소</string>
    <string name="btn_shoot">촬영</string>

    <!--cos_detail-->
    <string name="tv_detail"> 제품 이름 </string>
    <string name="tv_set">정량 설정</string>

    <string name="tv_company">제조사</string>
    <string name="tv_kinds">종류</string>

    <string name="btn_0_5">0.5 펌프</string>
    <string name="btn_1_0">1.0 펌프</string>
    <string name="btn_1_5">1.5 펌프</string>
    <string name="btn_2_0">2.0 펌프</string>
    <string name="btn_2_5">2.5 펌프</string>
    <string name="btn_3_0">3.0 펌프</string>
    <string name="btn_complete">등록 완료</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--cos_ingred.xml-->
    <string name="tv_Cos_content">제품 내용</string>
    <string name="tv_Cos_Ingred">성분</string>

    <!--list_cositem.xml-->
    <string name="tv_list_cosname">화장품 이름</string>
    <string name="tv_list_date">사용기한</string>
    <string name="tv_result">완료 중단 </string>

    <!--img1_add.xml-->
    <string name="act_cos_ingred">화장품 상세 정보보기 </string>
    <string name="act_insert">수정</string>
    <string name="act_delete">삭제</string>

    <!--cos_add_popup.xml-->
    <string name="tv_add_amount">0</string>
    <string name="btn_amount_plus">+</string>
    <string name="btn_amount_minus">-</string>
    <string name="btn_amount_exit">확인</string>
    <string name="btn_cosdelete">화장품 삭제</string>

    <!--cos_delete.xml-->
    <string name="tv_dmessage">정말로 삭제하시겠습니까? </string>
    <string name="btn_dcancle">취소</string>
    <string name="btn_dcomplete">완료</string>
    <string name="btn_dstop">중단</string>

    <!--deletemenu.xml-->
    <string name="mitem1">화장품1</string>
    <string name="mitem2">화장품2</string>
    <string name="mitem3">화장품3</string>
</resources>