<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cos_DetailActivity">

    <ImageView
        android:id="@+id/img_detail_cos"
        android:layout_width="162dp"
        android:layout_height="145dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        app:srcCompat="@drawable/kakaologo" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/tv_detail"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_cos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_detail_cos"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/tv_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_set"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <RadioGroup
        android:id="@+id/amountGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/amount1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_result"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn_0_5"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/amount2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/radio_result"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn_1_0"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/amount3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_result"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn_1_5"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/amount4"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_result"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn_2_0"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/amount5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/radio_result"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn_2_5"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/amount6"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_result"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn_3_0"
                android:textColor="@color/white" />
        </LinearLayout>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="18dp"
        android:text="@string/tv_company"
        app:layout_constraintBottom_toTopOf="@+id/tv_type"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_kinds"
        app:layout_constraintEnd_toEndOf="@+id/tv_brand"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_brand"
        app:layout_constraintTop_toBottomOf="@+id/tv_brand" />

    <TextView
        android:id="@+id/tv_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_dose"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

</androidx.constraintlayout.widget.ConstraintLayout>