<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00FFFFFF">

    <Button
        android:id="@+id/btn_amount_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/btn_amount_plus"
        app:layout_constraintBottom_toTopOf="@+id/btn_amount_exit"
        app:layout_constraintEnd_toStartOf="@+id/btn_amount_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_amount" />

    <TextView
        android:id="@+id/tv_add_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_add_amount"
        app:layout_constraintBottom_toTopOf="@+id/btn_amount_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_amount_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_amount_minus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_amount_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_amount_plus"
        app:layout_constraintTop_toTopOf="@+id/btn_amount_plus" />

    <Button
        android:id="@+id/btn_amount_exit"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:text="@string/btn_amount_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_amount_plus" />

    <Button
        android:id="@+id/btn_cosdelete"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_cosdelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_amount_exit" />


</androidx.constraintlayout.widget.ConstraintLayout>