<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".CosDeletePopup">

    <TextView
        android:id="@+id/tv_dmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tv_dmessage"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_dcancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btn_cancle"
        app:layout_constraintEnd_toStartOf="@+id/btn_dcomplete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dmessage" />

    <Button
        android:id="@+id/btn_dstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_dstop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dcomplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dcomplete" />

    <Button
        android:id="@+id/btn_dcomplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_dcomplete"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dcancle"
        app:layout_constraintEnd_toStartOf="@+id/btn_dstop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dcancle"
        app:layout_constraintTop_toTopOf="@+id/btn_dcancle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>