<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CosAddActivity">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_edt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_edt"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add"
        app:layout_constraintEnd_toStartOf="@+id/btn_cosdelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="@+id/btn_add"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_cosdelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        app:layout_constraintBottom_toBottomOf="@+id/btn_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_edt"
        app:layout_constraintTop_toTopOf="@+id/btn_edt" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_1st_add"
            android:layout_width="wrap_content"
            android:layout_height="181dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/img_2nd_add"
            android:layout_width="wrap_content"
            android:layout_height="181dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/img_3rd_add"
            android:layout_width="wrap_content"
            android:layout_height="181dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_background" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_add_img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="101dp"
        android:text="@string/tv_add_img1"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_add_img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_add_img2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_add_img1"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/tv_add_img1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_add_img3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_add_img3"
        app:layout_constraintBottom_toBottomOf="@+id/tv_add_img2"
        app:layout_constraintEnd_toEndOf="@+id/btn_cosdelete"
        app:layout_constraintStart_toStartOf="@+id/btn_cosdelete"
        app:layout_constraintTop_toTopOf="@+id/tv_add_img2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>