<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineProvider="none"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_main_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/edt_main_id"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mycos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/tv_mycos"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_main_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_main_id"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <ImageButton
        android:id="@+id/img_mycos1"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edge_rose"
        android:baseline="10dp"
        android:baselineAlignBottom="false"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_img"
        app:layout_constraintEnd_toStartOf="@+id/img_mycos2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_mycos"
        app:layout_constraintTop_toBottomOf="@+id/tv_mycos" />

    <ImageButton
        android:id="@+id/img_mycos2"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:background="@drawable/edge_rose"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_img"
        app:layout_constraintBottom_toBottomOf="@+id/img_mycos1"
        app:layout_constraintEnd_toStartOf="@+id/img_mycos3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_mycos1"
        app:layout_constraintTop_toTopOf="@+id/img_mycos1" />

    <ImageButton
        android:id="@+id/img_mycos3"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:background="@drawable/edge_rose"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_img"
        app:layout_constraintBottom_toBottomOf="@+id/img_mycos2"
        app:layout_constraintEnd_toEndOf="@+id/tv_mycos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_mycos2"
        app:layout_constraintTop_toTopOf="@+id/img_mycos2" />

    <TextView
        android:id="@+id/tv_usedate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_usedate1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_mycos1"
        app:layout_constraintStart_toStartOf="@+id/img_mycos1"
        app:layout_constraintTop_toBottomOf="@+id/img_mycos1" />

    <TextView
        android:id="@+id/tv_usedate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_usedate2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_mycos2"
        app:layout_constraintStart_toEndOf="@+id/img_mycos1"
        app:layout_constraintTop_toBottomOf="@+id/img_mycos2" />

    <TextView
        android:id="@+id/tv_usedate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_usedate3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_mycos3"
        app:layout_constraintStart_toStartOf="@+id/img_mycos3"
        app:layout_constraintTop_toBottomOf="@+id/img_mycos3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <ListView
        android:id="@+id/ListV_cos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_usedcos"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_usedcos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tv_usedcos"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/btn_circle"
        android:text="+"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mycos"
        app:layout_constraintEnd_toEndOf="@+id/tv_mycos"
        app:layout_constraintTop_toTopOf="@+id/tv_mycos" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>